<resources>
    <string name="app_name">WhereToGoFirst</string>
    <string name="app_name_kr">어디먼저갈까</string>

    <string name="add_place">장소 추가</string>
    <string name="current_location">현위치</string>

    <string name="search_place">장소, 주소 검색</string>

    <string name="select">선택</string>

    <string name="view_locate">위치보기</string>
    
    <string name="select_dialog_title">장소 추가</string>
    <string name="select_dialog_content">선택한 장소를 추가하겠습니까?</string>
    <string name="select_dialog_cancel">아니오</string>
    <string name="select_dialog_accept">예</string>

    <string name="get_lotation">위치 가져오기</string>

    <string name="start_point">출발지</string>
    <string name="via_point">경유지</string>
    <string name="dest_point">도착지</string>

    <string name="shortest_route">추천경로 탐색</string>

    <string name="navi_route">목적지로\n내비시작</string>

    <string name="view_route_with_map">네이버 지도 앱으로 경로보기</string>

    <string name="view_list">목록보기</string>
    <string name="view_map">지도보기</string>

    <string name="recom_route">추천 경로</string>

    <string name="update_dialog_title">업데이트 알림</string>
    <string name="update_dialog_content">신규 업데이트가 있습니다.\n플레이스토어로 이동합니다.</string>
    <string name="update_dialog_cancel">나중에</string>
    <string name="update_dialog_accept">이동</string>
</resources>