<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_normal">

            <TextView
                android:id="@+id/text_start_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_point"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                style="@style/TextTitle"/>

            <Button
                android:id="@+id/btn_add_start_place"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:text="@string/add_place"
                app:layout_constraintBottom_toBottomOf="@id/text_start_point"
                app:layout_constraintRight_toRightOf="parent"
                style="@style/SmallButton"/>

            <Button
                android:id="@+id/btn_get_locate_start_place"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:text="@string/current_location"
                app:layout_constraintBottom_toBottomOf="@id/text_start_point"
                app:layout_constraintRight_toLeftOf="@id/btn_add_start_place"
                android:layout_marginRight="@dimen/margin_half"
                style="@style/SmallButton"/>

            <View style="@style/Divider"
                app:layout_constraintTop_toBottomOf="@id/text_start_point"
                android:layout_marginTop="@dimen/margin_quarter"/>

            <LinearLayout
                android:id="@+id/layout_start_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/text_start_point"
                android:layout_marginTop="@dimen/margin_quarter"/>

            <TextView
                android:id="@+id/text_via_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_point"
                app:layout_constraintTop_toBottomOf="@id/layout_start_point"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="@dimen/margin_normal"
                style="@style/TextTitle"/>

            <Button
                android:id="@+id/btn_add_via_place"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:text="@string/add_place"
                app:layout_constraintBottom_toBottomOf="@id/text_via_point"
                app:layout_constraintRight_toRightOf="parent"
                style="@style/SmallButton"/>

            <View style="@style/Divider"
                app:layout_constraintTop_toBottomOf="@id/text_via_point"
                android:layout_marginTop="@dimen/margin_quarter"/>

            <LinearLayout
                android:id="@+id/layout_via_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/text_via_point"
                android:layout_marginTop="@dimen/margin_quarter"/>

            <TextView
                android:id="@+id/text_dest_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dest_point"
                app:layout_constraintTop_toBottomOf="@id/layout_via_point"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="@dimen/margin_normal"
                style="@style/TextTitle"/>

            <Button
                android:id="@+id/btn_add_dest_place"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:text="@string/add_place"
                app:layout_constraintBottom_toBottomOf="@id/text_dest_point"
                app:layout_constraintRight_toRightOf="parent"
                style="@style/SmallButton"/>

            <Button
                android:id="@+id/btn_get_locate_dest_place"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:text="@string/current_location"
                app:layout_constraintBottom_toBottomOf="@id/text_dest_point"
                app:layout_constraintRight_toLeftOf="@id/btn_add_dest_place"
                android:layout_marginRight="@dimen/margin_half"
                style="@style/SmallButton"/>

            <View style="@style/Divider"
                app:layout_constraintTop_toBottomOf="@id/text_dest_point"
                android:layout_marginTop="@dimen/margin_quarter"/>

            <LinearLayout
                android:id="@+id/layout_dest_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/text_dest_point"
                android:layout_marginTop="@dimen/margin_quarter"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>